# et-game

./: .gitignore  Makefile.am  README  configure.ac  et-game.c  et-game.h  ex-txt.et  ex.et  exit.et  game.cfg  index.html  item.et  makefile  params.json  runme  stage2.et  stage3.et  stage6.et  stage7.et  stage8.et
data/: Makefile  Makefile.am  end_etgame.et  game-test.cfg  game.cfg  stage1.et  stage4.et  stage5.et  stage9.et  start_etgame.et
src/: Makefile.am  et-game.c  et-game.h  gl-drawings.c  gl-drawings.h
